--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>B.A. in Philosophy: Summa Cum Laude - SUNY Geneseo - 2018</p>
       </div>
       <div class="skill-row">
-        <img width="25%" height="auto" class="toadpluck" src="Images/toadpluck.png" alt="toadpluck-img">
+        <img width="25%" height="auto" class="toadpluck" src="Images/toadpluck.PNG" alt="toadpluck-img">
         <h3>Toad Plucker</h3>
         <p>An underappreciated skill is my ability to spot and snag warty amphibians when they invade my living space. They are returned unharmed to their natural habitats.</p>
 
